Bug Fixes: 1. Line Breaks weren't being rendered in posts. 2. About page image sizing on smaller devices

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -755,7 +755,7 @@ textarea {
 }
 
 .about-main img {
-    max-width: 500px;
+    max-width: 250px;
     border-radius: 50px;
 }
 
@@ -929,6 +929,11 @@ footer {
 }
 
 @media screen and (min-width: 768px) {
+
+    .about-main img {
+        max-width: 500px;
+    }
+
     .login-container {
         width: 70%;
     }
